@@ -9,8 +9,9 @@ gem2deb (0.1.1) experimental; urgency=low
   * Add Vcs-* fields after moving to PRE repo
   * Document that gem2deb can download the gem using gem fetch
   * gem2tgz gemname now downloads the gem if needed.
+  * Generate a better debian/copyright template.
 
- -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Sat, 12 Mar 2011 09:01:21 +0100
+ -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Sun, 13 Mar 2011 11:07:20 +0100
 
 gem2deb (0.1.0) experimental; urgency=low
 
